		or (for 1.4.12/1.6.5 quota files)
		'tunefs.lustre --param="mdt.quota_type=ug2" $MDTDEV',
		'tunefs.lustre --param="ost.quota_type=ug2" $MDTDEV'
	  For more information, please refer to bugzilla 13904.
	* Output of lfs quota has been made less detailed by default,
	  old (verbose) output can be obtained by using -v option.

Severity   : normal
Frequency  : only for filesystems larger than 8TB
Bugzilla   : 16101
Description: ldiskfs BUG ldiskfs_mb_use_best_found()
Details    : The ldiskfs mballoc3 code was using a __u16 to store the group
	     number, but with 8TB+ filesystems there are more than 65536
	     groups, causing an oops.

Severity   : normal
Bugzilla   : 15576
Description: Resolve device initialization race
Details    : Prevent proc handler from accessing devices added to the
             obd_devs array but yet be intialized.

Severity   : enhancement
Bugzilla   : 15308
Description: Update to SLES10 SP2 kernel-2.6.16.60-0.23.

Severity   : enhancement
Bugzilla   : 16190
Description: Update to RHEL5 kernel-2.6.18-92.1.6.el5.

Severity   : normal
Bugzilla   : 16318
Frequency  : rare, on PPC clients
Description: don't swab ost objects in response about directory, because
	     this not exist.
Details    : bug similar bug 14856, but in different function.

Severity   : enhancement
Bugzilla   : 15754
Description: lfs quota tool enhancements
Details    : added units specifiers support for setquota, default to
	     current uid/gid for quota report, short quota stats by
	     default, nonpositional parameters for setquota, added
	     llapi_quotactl manual page.

Severity   : normal
Bugzilla   : 16037
Description: Client runs out of low memory
Details    : Consider only lowmem when counting initial number of llap pages

Severity   : normal
Bugzilla   : 15625
Description: *optional* service tags registration
Details    : if the "service tags" package is installed on a Lustre node
	     When the filesystem is mounted, a local-node service tag will