@@ -39,6 +39,13 @@ tbd Sun Microsystems, Inc.
 	  old (verbose) output can be obtained by using -v option.
 
 Severity   : normal
+Bugzilla   : 16080
+Description: don't fail open with -ERANGE
+Details    : if client connected until mds will be know about real ost count
+             get LOV EA can be fail because mds not allocate enougth buffer 
+             for LOV EA.
+
+Severity   : normal
 Frequency  : only for filesystems larger than 8TB
 Bugzilla   : 16101
 Description: ldiskfs BUG ldiskfs_mb_use_best_found()
